tests/baselines/reference/duplicateConstructSignature2.errors.txt
tests/cases/compiler/duplicateConstructSignature2.ts(2,5): error TS2463: Duplicate overload signature for call signature.
tests/cases/compiler/duplicateConstructSignature2.ts(3,5): error TS2463: Duplicate overload signature for call signature.


==== tests/cases/compiler/duplicateConstructSignature2.ts (2 errors) ====
    interface I<T> {
        (x: T): number;
        ~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
        (x: T): string;
        ~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for call signature.
    }